--- a/mainsite/templates/mainsite/about.html
+++ b/mainsite/templates/mainsite/about.html
@@ -107,7 +107,7 @@
 </div>
 <div class="aboutContainer">
     <h1>Education</h1>
-    <div class="edu-table">
+    <div class="edu-table" id="edu-table">
         <div class="school">
             <h3>University of California-Berkeley</h3>
             <p class="role">Certificate - Software Development & Programming</p>
@@ -125,5 +125,11 @@
         </div>
     </div>
 </div>
+
+<footer>
+    <div>
+        <p>Created and designed by Michael Thousand - &copy; 2023. Photo by Manor Studios 1848.</p>
+    </div> 
+</footer>
 
 {% endblock %}
