--- a/mainsite/templates/mainsite/contact.html
+++ b/mainsite/templates/mainsite/contact.html
@@ -19,15 +19,28 @@
     <a href="https://www.linkedin.com/in/michael-thousand-89981911b/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
     <a href="mailto:me@michaelthousand.com"><i class="fa fa-envelope"></i></a>
 </div>  
+<!--
 <div id="contactMe">
     <h1>Get in touch with me!</h1>
     <p>If you would like to contact me about a potential job or just with general comments, please feel free to use the form below:</p>
     <form method="POST">
         {% csrf_token %}
         {{form.as_p}}
-        <button type="submit">Submit</button>
+        <button class="button-52" type="submit">Submit</button>
     </form>
-
 </div>
+-->
+<div id="contactMe">
+    <h1>Get in touch with me!</h1>
+    <p>Use the links above if you would like to give feedback on this site or a project, or if you are interested in working with me.</p>
+    <p>Thanks for visiting!</p>
+    
+</div>
+
+<footer>
+    <div>
+        <p>Created and designed by Michael Thousand - &copy; 2023. Photo by Manor Studios 1848.</p>
+    </div> 
+</footer>
 
 {% endblock %}
