--- a/mainsite/templates/mainsite/contactsuccess.html
+++ b/mainsite/templates/mainsite/contactsuccess.html
@@ -25,4 +25,10 @@
 
 </div>
 
+<footer>
+    <div>
+        <p>Created and designed by Michael Thousand - &copy; 2023. Photo by Manor Studios 1848.</p>
+    </div> 
+</footer>
+
 {% endblock %}
